@@ -19,6 +19,8 @@ version <next>:
 - displace filter
 - selectivecolor filter
 - extensive native AAC encoder improvements
+- ADPCM PSX decoder
+- genh, vag, ads & svag demuxer
 
 
 version 2.8:
